--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="css/slider.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="css/slider.css">
   </head>
   <body>
-    <div class="outer">
-      <div class="slider">
-        <div style="postion:relative; margin-top:10px;">
-          <div class="button"></div>
-          <div class="lang"></div>
-          <div class="close"></div>
-        </div>
-        <div>
-          <div class="Text">
-            <h2 class="bold">My</h2>
-            <h2 class="light">DRIBBLE.</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-          <div class="Image">
+    <div class="wrapper">
+      <div class="social__block">
 
-          </div>
-        </div>
       </div>
     </div>
   </body>
