--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="css/slider.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <div class="social__block">
-
-      </div>
-    </div>
-  </body>
-</html>
+ <html lang="en">
+   <head>
+     <link href="css/slider.css" rel="stylesheet">
+   </head>
+   <body>
+     <div class="wrapper">
+       <div class="social">
+         <div class="social__nav">
+           <div class="social__nav__back"></div>
+           <div class="social__nav__eng">En</div>
+           <div class="social__nav__ru">Ru</div>
+           <div class="social__nav__close"></div>
+         </div>
+         <div class="social__content">
+           <span class="social__content__text">
+             <h3>My <span>Social</span></h3>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+           </span>
+           <span class="social__content__image">
+             <img src="img/DribbbleScreenshot.jpg" alt="Dribbble Screenshot" width="200" height="160">
+           </span>
+         </div>
+         <div class="social__bar">
+           <ul>
+             <li class="inst"></li>
+             <li class="youtube"></li>
+           </ul>
+         </div>
+       </div>
+     </div>
+   </body>
+ </html>
